--- a/poa-search-server/src/main/resources/application.yml
+++ b/poa-search-server/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
-  port: 8081
+  port: 8443
+  ssl:
+    key-store: classpath:keystore/powerofattorney.p12
+    key-store-type: PKCS12
+    key-store-password: powerofattorney
+    key-alias: powerofattorney
+    enabled: true
 
 adapter:
     poa:
