--- a/poa-search-server/pom.xml
+++ b/poa-search-server/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>11</java.version>
+        <poa-search.api.version>0.0.2</poa-search.api.version>
         <kotlin.version>1.3.61</kotlin.version>
         <swagger.version>2.9.2</swagger.version>
     </properties>
@@ -61,7 +62,7 @@
         <dependency>
             <groupId>nl.rabobank.service.poa.search</groupId>
             <artifactId>poa-search-api</artifactId>
-            <version>0.0.1</version>
+            <version>${poa-search.api.version}</version>
         </dependency>
 
         <dependency>
